--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   </head>
   <body>
-  	
+    <div id="trainercontainer"></div>
   	<div id="container">
       <div id="pokecontainer1" class="pokecontainer">
        <div id="poke1" class="pokemon"></div>
@@ -34,6 +34,7 @@
         <div id="poketext6" class="poketextcontainer"></div>
       </div>
     </div>
+    <div id="reroller">Reroll!</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="JS/scripts.js"></script>
   </body>
